[gd_scene load_steps=6 format=3 uid="uid://btmwklwbjyob0"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_icy1q"]
[ext_resource type="PackedScene" uid="uid://b7ajk7rvap5nu" path="res://objects/ui/pause_screen.tscn" id="2_64b4y"]

[sub_resource type="Animation" id="Animation_no1i5"]
resource_name = "anim_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Bar_Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -360)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Bar_Bottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(0, 360), Vector2(0, 720)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio_BGM:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-10.0]
}

[sub_resource type="Animation" id="Animation_6k54f"]
resource_name = "anim_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Bar_Top:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, -360), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Bar_Bottom:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(0, 720), Vector2(0, 360)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio_BGM:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-10.0, -60.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uieal"]
_data = {
"anim_in": SubResource("Animation_no1i5"),
"anim_out": SubResource("Animation_6k54f")
}

[node name="Game" type="Node"]
process_mode = 3
script = ExtResource("1_icy1q")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 50

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource("2_64b4y")]

[node name="Bar_Top" type="ColorRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Bar_Bottom" type="ColorRect" parent="CanvasLayer"]
offset_top = 360.0
offset_right = 1280.0
offset_bottom = 720.001
color = Color(0, 0, 0, 1)

[node name="Audio_BGM" type="AudioStreamPlayer" parent="." groups=["bgm_player"]]
volume_db = -10.0
bus = &"bgm"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uieal")
}

[node name="Timer_RestartLevel" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="exited" from="CanvasLayer/PauseScreen" to="." method="_on_pause_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer_RestartLevel" to="." method="_on_timer_restart_level_timeout"]
